crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__unregister_segment__simple_2_remove_segment_id2_segments_schema.snap
---
source: crates/store/re_redap_tests/src/tests/unregister_segment.rs
expression: "batch.clone().filter_columns_by(|f|\nf.metadata().get(\"rerun:index_kind\").is_none()).unwrap().format_schema_snapshot()"
---
rerun_last_updated_at: Timestamp(ns)
rerun_layer_names: List[Utf8]
rerun_num_chunks: u64
rerun_segment_id: Utf8
rerun_size_bytes: u64
rerun_storage_urls: List[Utf8]
