crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__unregister_segment__unregister_then_query_1_added_data.snap
---
source: crates/store/re_redap_tests/src/tests/unregister_segment.rs
expression: filtered_chunk_info.format_snapshot(false)
---
┌──────────────────────────────────┬──────────────────┬─────────────────────┬───────────────────┬─────────────────┬────────────────────────┬───────────────────────────────────┐
│ chunk_id                         ┆ chunk_segment_id ┆ rerun_segment_layer ┆ chunk_entity_path ┆ chunk_is_static ┆ rerun_layer_direct_url ┆ rerun_layer_direct_url_expires_at │
╞══════════════════════════════════╪══════════════════╪═════════════════════╪═══════════════════╪═════════════════╪════════════════════════╪═══════════════════════════════════╡
│ 00000000000000010000000000000001 ┆ my_segment_id    ┆ base                ┆ /my/entity        ┆ false           ┆ null                   ┆ null                              │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 00000000000000010000000000000002 ┆ my_segment_id    ┆ base                ┆ /my/entity        ┆ true            ┆ null                   ┆ null                              │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 00000000000000010000000000000003 ┆ my_segment_id    ┆ base                ┆ /my/other/entity  ┆ false           ┆ null                   ┆ null                              │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 00000000000000010000000000000004 ┆ my_segment_id    ┆ base                ┆ /my/other/entity  ┆ true            ┆ null                   ┆ null                              │
└──────────────────────────────────┴──────────────────┴─────────────────────┴───────────────────┴─────────────────┴────────────────────────┴───────────────────────────────────┘
